--- a/index.html
+++ b/index.html
@@ -700,8 +700,184 @@
             </div>
         </div>
 
+
+
+
+        <!-- ******************************************** -->
+        <!--         Notification Modal Start  Here        -->
+        <!-- ********************************************* -->
+        <div class="my-modal  notification-modal active" id="notification-modal">
+            <div class="modal-content ">
+                <!-- close btn -->
+                <button class=" modal-close-btn my-primary-btn my-btn close-btn">
+                    <span><i class="fa-solid fa-xmark"></i></span>
+                </button>
+
+                <div class="my-flex-between header">
+                    <h3>Notification</h3>
+                    <button class="my-fw-bold"><span>Mark all</span></button>
+                </div>
+
+                <div class="all-notification my-has-scrollbar my-mt-0">
+                    <div class="items">
+                        <!-- single notification item -->
+                        <div class="item  my-flex-between my-align-start my-gap-3">
+                            <div class="base">New</div>
+                            <!-- image -->
+                            <img class="profile-img" src="./Static/images/profilepng.png" alt="profile">
+
+                            <!-- info -->
+                            <div class="info my-w-100">
+                                <div class="my-flex-between my-align-end my-w-100">
+                                    <div class="my-w-100">
+                                        <p><strong>Tanvir Ahmed</strong> wants to edit <strong>Design System
+                                            </strong>thanks
+                                            you so much tanvir.</p>
+                                        <div class="my-flex-between my-mt-1 ">
+                                            <small class=" my-d-inline-block">Friday 2.23pm</small>
+                                            <p class="my-fw-bold">12 min ago</p>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <!-- action btn -->
+                                <div class="my-d-flex my-gap-2 my-mt-2">
+                                    <button class="my-btn my-btn-sm my-primary-btn"><span>Accept</span></button>
+                                    <button class="my-btn my-btn-sm my-btn-outline"><span>Accept</span></button>
+                                </div>
+                            </div>
+                        </div>
+
+
+                        <!-- single notification item -->
+                        <div class="item  my-d-flex my-align-start my-gap-3">
+                            <!-- <div class="base">New</div> -->
+
+                            <!-- image -->
+                            <img class="profile-img" src="./Static/images/profile2.png" alt="profile">
+
+                            <!-- info -->
+                            <div class="info my-w-100">
+                                <div class="my-flex-between my-align-end my-w-100">
+                                    <div class="my-w-100">
+                                        <p><strong>Md Foysal</strong> create a new <strong>component </strong></p>
+                                        <div class="my-flex-between my-mt-1 ">
+                                            <small class=" my-d-inline-block">Friday 1.42pm</small>
+                                            <p class="my-fw-bold">2 hours ago</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- single notification item -->
+                        <div class="item  my-d-flex my-align-start my-gap-3">
+                            <!-- <div class="base">New</div> -->
+
+                            <!-- image -->
+                            <img class="profile-img" src="./Static/images/profile2.png" alt="profile">
+
+                            <!-- info -->
+                            <div class="info my-w-100">
+                                <div class="my-flex-between my-align-end my-w-100">
+                                    <div class="my-w-100">
+                                        <p><strong>Md Foysal</strong> create a new <strong>component </strong></p>
+                                        <div class="my-flex-between my-mt-1 ">
+                                            <small class=" my-d-inline-block">Friday 1.42pm</small>
+                                            <p class="my-fw-bold">2 hours ago</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- single notification item -->
+                        <div class="item  my-d-flex my-align-start my-gap-3">
+                            <!-- <div class="base">New</div> -->
+
+                            <!-- image -->
+                            <img class="profile-img" src="./Static/images/profile2.png" alt="profile">
+
+                            <!-- info -->
+                            <div class="info my-w-100">
+                                <div class="my-flex-between my-align-end my-w-100">
+                                    <div class="my-w-100">
+                                        <p><strong>Md Foysal</strong> create a new <strong>component </strong></p>
+                                        <div class="my-flex-between my-mt-1 ">
+                                            <small class=" my-d-inline-block">Friday 1.42pm</small>
+                                            <p class="my-fw-bold">2 hours ago</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- single notification item -->
+                        <div class="item  my-d-flex my-align-start my-gap-3">
+                            <!-- <div class="base">New</div> -->
+
+                            <!-- image -->
+                            <img class="profile-img" src="./Static/images/profile2.png" alt="profile">
+
+                            <!-- info -->
+                            <div class="info my-w-100">
+                                <div class="my-flex-between my-align-end my-w-100">
+                                    <div class="my-w-100">
+                                        <p><strong>Md Foysal</strong> create a new <strong>component </strong></p>
+                                        <div class="my-flex-between my-mt-1 ">
+                                            <small class=" my-d-inline-block">Friday 1.42pm</small>
+                                            <p class="my-fw-bold">2 hours ago</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- single notification item -->
+                        <div class="item  my-d-flex my-align-start my-gap-3">
+                            <!-- <div class="base">New</div> -->
+
+                            <!-- image -->
+                            <img class="profile-img" src="./Static/images/profile2.png" alt="profile">
+
+                            <!-- info -->
+                            <div class="info my-w-100">
+                                <div class="my-flex-between my-align-end my-w-100">
+                                    <div class="my-w-100">
+                                        <p><strong>Md Foysal</strong> create a new <strong>component </strong></p>
+                                        <div class="my-flex-between my-mt-1 ">
+                                            <small class=" my-d-inline-block">Friday 1.42pm</small>
+                                            <p class="my-fw-bold">2 hours ago</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+
+                        <!-- single notification item -->
+                        <div class="item  my-d-flex my-align-start my-gap-3">
+                            <!-- <div class="base">New</div> -->
+
+                            <!-- image -->
+                            <img class="profile-img" src="./Static/images/profilepng.png" alt="profile">
+
+                            <!-- info -->
+                            <div class="info my-w-100">
+                                <div class="my-flex-between my-align-end my-w-100">
+                                    <div class="my-w-100">
+                                        <p><strong>Hello Tanvir</strong> Your Passsword has<strong>Reset </strong></p>
+                                        <div class="my-flex-between my-mt-1 ">
+                                            <small class=" my-d-inline-block">Friday 12.00am</small>
+                                            <p class="my-fw-bold">2 days ago</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <!-- js -->
-        <script src="./Static/Js/app.js"></script>
+        <script type="module" src="./Static/Js/app.js"></script>
     </body>
 
 </html>
