--- a/test.html
+++ b/test.html
@@ -2,96 +2,186 @@
 <html lang="en">
 
     <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <meta charset="utf-8" />
+        <title>Swiper demo</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
+
         <style>
-            /* Table container */
-            .table {
-                display: flex;
-                flex-direction: column;
+            html,
+            body {
+                position: relative;
+                height: 100%;
+            }
+
+            body {
+                background: #eee;
+                font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+                font-size: 14px;
+                color: #000;
+                margin: 0;
+                padding: 0;
+            }
+
+            swiper-container {
+                width: 300px;
+                height: 300px;
+                position: absolute;
+                left: 50%;
+                top: 50%;
+                margin-left: -150px;
+                margin-top: -150px;
+            }
+
+            swiper-slide {
+                background-position: center;
+                background-size: cover;
+            }
+
+            swiper-slide img {
+                display: block;
                 width: 100%;
-                border: 1px solid #ccc;
+            }
+
+            /* Video container styling */
+            .full-video-container {
+                position: relative;
+                z-index: 2;
+                max-width: 800px;
                 margin: 0 auto;
+                text-align: center;
+                padding: 20px;
+
             }
 
-            /* Table row */
-            .table-row {
+            .col-lg-10 h1 {
+                font-size: 52px;
+                margin-left: 30px;
+
+            }
+
+
+            /* Video styling */
+            #main_video {
+                width: 100%;
+                height: auto;
+                border-radius: 10px;
+                box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.2);
+                background-color: #000;
+
+            }
+
+            /* Button and progress bar styling */
+            .play-button {
+                cursor: pointer;
                 display: flex;
-                flex-wrap: wrap;
-                /* Wrap cells for small screens */
-                border-bottom: 1px solid #ccc;
+                justify-content: center;
+                align-items: center;
+                color: rgb(120, 84, 110);
+                font-size: 1.5rem;
+                margin-top: 15px;
             }
 
-            /* Header row styling */
-            .table-row.header {
-                font-weight: bold;
-                background-color: #f4f4f4;
+            .custom-progressbar {
+                width: 70%;
+                height: 5px;
+                margin-top: 10px;
+                background-color: rgb(149, 149, 149);
+                border-radius: 5px;
+                appearance: none;
             }
 
-            /* Table cell */
-            .table-cell {
-                flex: 1;
-                /* Make cells take equal width */
-                padding: 10px;
-                text-align: left;
-                border-right: 1px solid #ccc;
-                box-sizing: border-box;
+            /* Custom progress bar styling */
+            .custom-progressbar::-webkit-slider-thumb {
+                appearance: none;
+                width: 12px;
+                height: 12px;
+                background-color: rgb(120, 84, 110);
+                border-radius: 50%;
+                cursor: pointer;
             }
 
-            .table-cell:last-child {
-                border-right: none;
+            .highlight {
+                color: rgb(120, 84, 110);
             }
 
-            /* Responsive styling */
-            @media (max-width: 600px) {
-                .table-row {
-                    flex-direction: column;
-                    /* Stack cells vertically */
-                }
+            .normal {
+                color: rgb(149, 149, 149)
+            }
 
-                .table-cell {
-                    border-right: none;
-                    /* Remove cell borders */
-                    border-bottom: 1px solid #ccc;
-                    /* Add bottom border */
-                    position: relative;
-                    padding-left: 50%;
-                    /* Space for labels */
-                    text-align: right;
-                    /* Align content to the right */
-                }
-
-                .table-cell:before {
-                    content: attr(data-label);
-                    /* Use data-label for headers */
-                    position: absolute;
-                    left: 10px;
-                    font-weight: bold;
-                    text-align: left;
-                }
+            .custom-progressbar::-moz-range-thumb {
+                width: 12px;
+                height: 12px;
+                background-color: #007bff;
+                border-radius: 50%;
+                cursor: pointer;
             }
         </style>
     </head>
 
     <body>
-        <div class="table">
-            <div class="table-row header">
-                <div class="table-cell">Header 1</div>
-                <div class="table-cell">Header 2</div>
-                <div class="table-cell">Header 3</div>
+
+        <swiper-container class="mySwiper" pagination="true" effect="cube" grab-cursor="true" cube-effect-shadow="true"
+            cube-effect-slide-shadows="true" cube-effect-shadow-offset="20" cube-effect-shadow-scale="0.94">
+            <swiper-slide>
+                <img src=" https://swiperjs.com/demos/images/nature-1.jpg" />
+            </swiper-slide>
+            <swiper-slide>
+                <img src="https://swiperjs.com/demos/images/nature-2.jpg" />
+            </swiper-slide>
+            <swiper-slide>
+                <img src="https://swiperjs.com/demos/images/nature-3.jpg" />
+            </swiper-slide>
+            <swiper-slide>
+                <img src="https://swiperjs.com/demos/images/nature-4.jpg" />
+            </swiper-slide>
+        </swiper-container>
+
+
+        <div class="full-video-container">
+            <video loop="true" muted="" id="main_video">
+                <source src="https://download.odoocdn.com/videos/odoo_com/video_homepage.webm" type="video/webm">
+                <source src="https://download.odoocdn.com/videos/odoo_com/video_homepage.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+
+            <div class="d-flex justify-content-center align-items-center">
+                <a id="videoControl" class="play-button">Play</a>
             </div>
-            <div class="table-row">
-                <div class="table-cell" data-label="Header 1">Data 1</div>
-                <div class="table-cell" data-label="Header 2">Data 2</div>
-                <div class="table-cell" data-label="Header 3">Data 3</div>
-            </div>
-            <div class="table-row">
-                <div class="table-cell" data-label="Header 1">Data 4</div>
-                <div class="table-cell" data-label="Header 2">Data 5</div>
-                <div class="table-cell" data-label="Header 3">Data 6</div>
-            </div>
+            <input id="videoProgress" type="range" min="0" max="100" value="0" class="custom-progressbar">
         </div>
+
+        <script>
+            // Get elements
+            const video = document.getElementById('main_video');
+            const playButton = document.getElementById('videoControl');
+            const progressBar = document.getElementById('videoProgress');
+
+            // Play or pause video on button click
+            playButton.addEventListener('click', function () {
+                if (video.paused) {
+                    video.play();
+                    playButton.innerHTML = '<i class="fa fa-pause"></i>';
+                } else {
+                    video.pause();
+                    playButton.innerHTML = '<i class="fa fa-play"></i>';
+                }
+            });
+
+            // Update progress bar
+            video.addEventListener('timeupdate', function () {
+                const percentage = (video.currentTime / video.duration) * 100;
+                progressBar.value = percentage;
+            });
+
+            // Seek video on progress bar input
+            progressBar.addEventListener('input', function () {
+                const seekTime = (progressBar.value / 100) * video.duration;
+                video.currentTime = seekTime;
+            });
+        </script>
+
+        <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
+
     </body>
 
 </html>
